# logium

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODOS.md  run.sh
.claude/agents/: implementer.md  planner.md  reviewer.md
.github/workflows/: ci.yml
benchmark/results/: 2026-02-08_194448.txt  2026-02-12_194218.txt  2026-02-12_203246.txt  2026-02-13_181503.txt  2026-02-13_185836.txt  2026-02-13_191304.txt  2026-02-13_194126.txt  2026-02-13_200727.txt  2026-02-14_004555.txt
crates/logium-core/: Cargo.toml
crates/logium-core/benches/: analysis_benchmark.rs
crates/logium-core/src/: engine.rs  export.rs  lib.rs  model.rs
crates/logium-core/tests/: real_data_tests.rs
crates/logium-server/: Cargo.toml
crates/logium-server/src/: db.rs  main.rs
crates/logium-server/src/routes/: analysis.rs  clustering.rs  import_export.rs  mod.rs  patterns.rs  projects.rs  rules.rs  rulesets.rs  sources.rs  templates.rs  timestamp_templates.rs
docs/: plan_v1.md  plan_v2.md
scripts/: run_benchmark.sh  setup_test_data.sh
ui/: README.md  index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/public/starters/: nginx.logium.json  syslog.logium.json  zookeeper.logium.json
ui/src/: App.svelte  app.css
ui/src/lib/: AnalysisView.svelte  ErrorClusteringView.svelte  LogViewer.svelte  PatternEditor.svelte  ProjectManager.svelte  RuleCreator.svelte  RuleEditor.svelte  RuleList.svelte  RulesetManager.svelte  SourceManager.svelte  StateEvolutionView.svelte  TemplateManager.svelte  TimelineAxis.svelte  TimelineDetailPanel.svelte  api.ts  (+5 more)
(+22 files in other folders)
