[package]
name = "logium-core"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
rayon = "1"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "analysis_benchmark"
harness = false
